<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/view_login_personal_info" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_54dp"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginRight="@dimen/dimen_60dp">
                <EditText
                    android:id="@+id/user_tel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38dp"
                    android:background="@drawable/bg_login_edit_text"
                    android:textColor="@color/color_1fbbb9"
                    android:textSize="@dimen/normal_s"
                    android:hint="@string/input_tel_num"
                    android:textColorHint="@color/color_c6d4d4"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/dimen_10dp"/>

                <ImageView
                    android:id="@+id/user_tel_clear"
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:background="@mipmap/login_delete_btn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dimen_12dp"
                    android:visibility="gone"/>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_14dp"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginRight="@dimen/dimen_60dp"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sms_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_38dp"
                        android:background="@drawable/bg_login_edit_text"
                        android:textColor="@color/color_1fbbb9"
                        android:textSize="@dimen/normal_s"
                        android:hint="@string/input_sms_code"
                        android:textColorHint="@color/color_c6d4d4"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="@dimen/dimen_10dp"
                        />
                    <ImageView
                        android:id="@+id/sms_code_clear"
                        android:layout_width="@dimen/dimen_15dp"
                        android:layout_height="@dimen/dimen_15dp"
                        android:background="@mipmap/login_delete_btn"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dimen_12dp"
                        android:visibility="gone"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/get_code_btn"
                    android:layout_height="@dimen/dimen_38dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@drawable/selector_yellow_btn_text"
                    android:background="@color/no_color"
                    android:textSize="@dimen/small"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/get_sms_code"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_14dp"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginRight="@dimen/dimen_60dp">
                <EditText
                    android:id="@+id/new_psw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38dp"
                    android:background="@drawable/bg_login_edit_text"
                    android:textColor="@color/color_1fbbb9"
                    android:textSize="@dimen/normal_s"
                    android:hint="@string/please_set_your_psw"
                    android:textColorHint="@color/color_c6d4d4"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/dimen_10dp"/>

                <ImageView
                    android:id="@+id/new_psw_clear"
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:background="@mipmap/login_delete_btn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dimen_12dp"
                    android:visibility="gone"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_14dp"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginRight="@dimen/dimen_60dp">
                <EditText
                    android:id="@+id/new_psw_again"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38dp"
                    android:background="@drawable/bg_login_edit_text"
                    android:textColor="@color/color_1fbbb9"
                    android:textSize="@dimen/normal_s"
                    android:hint="@string/please_set_your_psw_again"
                    android:textColorHint="@color/color_c6d4d4"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:inputType="textPassword"/>
                <ImageView
                    android:id="@+id/new_psw_again_clear"
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:background="@mipmap/login_delete_btn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dimen_12dp"
                    android:visibility="gone"/>
            </RelativeLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_38dp"
                android:layout_marginTop="@dimen/dimen_21dp"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginRight="@dimen/dimen_60dp"
                android:background="@drawable/bg_login_button"
                android:textColor="@color/white"
                android:text="@string/sure"
                android:textSize="@dimen/normal_s"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="1"
        android:minHeight="@dimen/dimen_100dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tupperware"
        android:textColor="@color/color_43484b"
        android:textSize="@dimen/large_20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_20dp"/>

</LinearLayout>